Fixed modal shadows being cut off bug

--- a/ghost/admin/app/styles/components/modals.css
+++ b/ghost/admin/app/styles/components/modals.css
@@ -36,7 +36,6 @@
     position: relative;
     z-index: 100;
     max-width: 550px;
-    overflow-y: auto;
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
